# myvault

./: .gitignore  Dockerfile.dev  LICENSE  Makefile  Pipfile  README.md  TODO.txt  pylintrc  util.mk
.github/workflows/: build.yaml
crypt/: Makefile
crypt/src/: Cargo.toml  aes_256_gcm.rs  aes_256_gcm_siv.rs  lib.rs  shared.rs
tests/: test_ui.py
www/: index.html
www/help/: index.css
www/js/: about.js  accordion.js  add.js  common.js  data.js  edit.js  en_words.js  example.js  header.js  icons.js  load.js  main.js  password.js  prefs.js  save.js  themes.js  utils.js
www/xtra/: color2rgb.html  cryptor.html  cryptor.js
